C/include/codata_constants_2014.h

ADD_IMPORT const struct codata_constant_type ELECTRON_MASS_IN_U_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_MOLAR_MASS_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_MUON_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_MUON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_NEUTRON_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_NEUTRON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_PROTON_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_PROTON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_TAU_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_TRITON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_VOLT_2014;
ADD_IMPORT const struct codata_constant_type ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2014;